Fix spacing of contacts on the review screen

--- a/app/styles/pages/review.scss
+++ b/app/styles/pages/review.scss
@@ -30,6 +30,7 @@
   section {
     flex: 4;
     margin-right: 20px;
+    margin-top: 30px;
 
     &:last-child {
       margin-right: 0px;
